更新公共样式

--- a/static/css/common.scss
+++ b/static/css/common.scss
@@ -9,6 +9,7 @@
     font-weight: 600;
     line-height: 30px;
     margin-left: -5px;
+    position: relative;
   
     .common-card-title-right-option {
       position: absolute;
