--- a/static/css/common.scss
+++ b/static/css/common.scss
@@ -3,6 +3,18 @@
 .red {
   color: #df3d33 !important;
 }
+/* clear */
+.clearfix {
+  zoom: 1;
+}
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
 /* wx component */
 .wx-switch-input {
   width: 40px !important;
