更新上传配置

--- a/static/css/common.wxss
+++ b/static/css/common.wxss
@@ -35,27 +35,24 @@
   border: 1px solid #BBBBBB;
   padding: 0 15px 5px;
   margin-bottom: 5px;
-
-  .common-card-title {
-    font-size: 14px;
-    color: #101010;
-    font-weight: 600;
-    line-height: 30px;
-    margin-left: -5px;
-    position: relative;
-  
-    .common-card-title-right-option {
-      position: absolute;
-      right: 0;
-      top: 0;
-      line-height: 30px;
-      font-size: 12px;
-      color: #A29B9B;
-      font-weight: 400;
-
-      &.has-arrows {
-        right: -3px;
-      }
-    }
-  }
+}
+.common-card .common-card-title {
+  font-size: 14px;
+  color: #101010;
+  font-weight: 600;
+  line-height: 30px;
+  margin-left: -5px;
+  position: relative;
+}
+.common-card .common-card-title .common-card-title-right-option {
+  position: absolute;
+  right: 0;
+  top: 0;
+  line-height: 30px;
+  font-size: 12px;
+  color: #A29B9B;
+  font-weight: 400;
+}
+.common-card .common-card-title .common-card-title-right-option.has-arrows {
+  right: -3px;
 }
